rubocop/examples/bad/Style_BlockNesting.rb
# TODO: This cop checks for excessive nesting of conditional
#   and looping constructs. Despite the cop's name,
#   blocks are not considered as an extra level of nesting.

# TODO: The maximum level of nesting allowed is configurable.
